scrollbar fix, styling changes

--- a/sdece/css/modal.css
+++ b/sdece/css/modal.css
@@ -179,10 +179,10 @@ button {
 .modal {
 	display: none;
 	width: 25%;
-	height: auto;
+	height: 100%;
 	max-height: 50%;
 	border-radius: 0.5rem;
-	overflow: scroll;
+	overflow: hidden;
 	position: absolute;
 	z-index: 2000;
 	top: 100px;
@@ -253,14 +253,14 @@ button {
 
 .modal-content {
 	position: relative;
-	height: 100%;
+	height: auto;
 	background-color: #fcfcfc;
 	font-family: Hind;
 	font-size: 1rem;
 	font-style: normal;
 	line-height: 2rem;
 	margin: 0;
-	overflow-y: scroll;
+	overflow-y: hidden;
 	padding-bottom: 1.8rem;
 	box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.1); /* inset shadow-md */
 }
